tests/baselines/reference/errorSupression1.errors.txt
==== tests/cases/compiler/errorSupression1.ts (1 errors) ====
    
    class Foo { static bar() { return "x"; } }
    
    var baz = Foo.b;
                  ~
!!! errorSupression1.ts(4,15): error TS2094: The property 'b' does not exist on value of type 'typeof Foo'.
      // Foo.b won't bind. 
    baz.concat("y");
    
      // So we don't want an error on 'concat'.